Based on a patch by Mihnea Ovidenie <mihnea@adobe.com>.

Reviewed by Darin Adler.

Percentage top value on position:relative descendant not resolved
correctly if containing block height is not specified explicitly.
https://bugs.webkit.org/show_bug.cgi?id=26396

WebCore:

If the containing block height is auto and the element is positioned
relatively, and if the element's top/bottom is percent, then resolve the
top/bottom as auto.

Test: fast/css/percent-top-relative-container-height-unspecified.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::relativePositionOffsetY):

LayoutTests:

* fast/css/percent-top-relative-container-height-unspecified.html: Added.
* platform/mac/fast/css/percent-top-relative-container-height-unspecified-expected.checksum: Added.
* platform/mac/fast/css/percent-top-relative-container-height-unspecified-expected.png: Added.
* platform/mac/fast/css/percent-top-relative-container-height-unspecified-expected.txt: Added.



Canonical link: https://commits.webkit.org/56942@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66170 268f45cc-cd09-0410-ab3c-d52691b4dbfc